# version requirement
cmake_minimum_required(VERSION 2.8)

SUBDIRLIST_RELATIVE(LIB_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/apps)
FOREACH(subdir ${LIB_SUBDIRS})
  OPTION(${subdir} "enable ${subdir}")
ENDFOREACH()

SUBDIRLIST(APP_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/apps)
FOREACH(subdir ${APP_SUBDIRS})
  ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()

SUBDIRLIST_RELATIVE(LIB_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/libs)
FOREACH(subdir ${LIB_SUBDIRS})
  OPTION(${subdir} "enable ${subdir}")
ENDFOREACH()

SUBDIRLIST(LIB_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/libs)
FOREACH(subdir ${LIB_SUBDIRS})
  ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()

SUBDIRLIST_RELATIVE(DLL_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/dlls)
FOREACH(subdir ${DLL_SUBDIRS})
  OPTION(${subdir} "enable ${subdir}")
ENDFOREACH()

SUBDIRLIST(DLL_SUBDIRS ${CMAKE_CURRENT_SOURCE_DIR}/dlls)
FOREACH(subdir ${DLL_SUBDIRS})
  ADD_SUBDIRECTORY(${subdir})
ENDFOREACH()

set(APP_INCLUDE_DIR ${LIB_SUBDIRS} CACHE INTERNAL "lib include dir")

SUBDIRLIST_RELATIVE(LIB_SUBDIRS_RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}/libs)

FOREACH(subdir ${LIB_SUBDIRS_RELATIVE})
	if(${${subdir}})
		set(PROJECT_LIB_NAME ${PROJECT_LIB_NAME} ${subdir})
	endif()
ENDFOREACH()

set(PROJECT_LIB_NAME ${PROJECT_LIB_NAME} CACHE INTERNAL "lib include relative dir")


